[package]
name = "marinade-bond-cli-rs"
version = "0.0.1"
authors = ["diman <diman@diman.io>"]
repository = "https://github.com/diman-io/marinade-bond-cli-rs"
license = "Apache-2.0"
edition = "2021"

[dependencies]
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
clap = { version = "=4.4.18", features = ["derive"] }
solana-client = "=1.17.20"
solana-sdk = "=1.17.20"